--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 blogimg">
-                <img src="img/n1.jpg" class="">
+                <img src=" n1.jpg" class="">
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n2.jpg" class="">
+                <img src=" n2.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Google updates its search quality rating guidelines</h3>
@@ -55,7 +55,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n3.png" class="">
+                <img src=" n3.png" class="">
             </div>
         </div>
     </div>
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n4.jpg" class="">
+                <img src=" n4.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Women hiring up 5 times at Facebook</h3>
@@ -83,7 +83,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n5.jpg" class="">
+                <img src=" n5.jpg" class="">
             </div>
         </div>
     </div>
@@ -97,7 +97,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n6.jpg" class="">
+                <img src=" n6.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Technical communication gains prominence on the back of growing IT sector</h3>
@@ -116,7 +116,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n7.gif" class="">
+                <img src=" n7.gif" class="">
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n8.png" class="">
+                <img src=" n8.png" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Chrome, the world’s most popular internet browser to get a makeover soon</h3>
@@ -144,7 +144,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n9.jpg" class="">
+                <img src=" n9.jpg" class="">
             </div>
         </div>
     </div>
@@ -162,7 +162,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n10.jpg" class="">
+                <img src=" n10.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Broadcom to Acquire Software Company CA Technologies for $18.9 Billion</h3>
@@ -181,7 +181,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n11.jpg" class="">
+                <img src=" n11.jpg" class="">
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n12.jpg" class="">
+                <img src=" n12.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Growth is like a cricket match, every phase is different: Rajesh Gopinathan, CEO, TCS</h3>
@@ -209,7 +209,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n13.jpg" class="">
+                <img src=" n13.jpg" class="">
             </div>
         </div>
     </div>
@@ -221,7 +221,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n14.jpg" class="">
+                <img src=" n14.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">YouTube to invest $25mn in countering fake news</h3>
@@ -240,7 +240,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n15.png" class="">
+                <img src=" n15.png" class="">
             </div>
         </div>
     </div>
@@ -249,7 +249,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n16.jpg" class="">
+                <img src=" n16.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">KTR favours IT growth across Hyderabad</h3>
@@ -268,7 +268,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n17.jpg" class="">
+                <img src=" n17.jpg" class="">
             </div>
         </div>
     </div>
@@ -277,7 +277,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n18.jpg" class="">
+                <img src=" n18.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">Q1 Results: TCS is back, and firing on all cylinders</h3>
@@ -296,7 +296,7 @@
                 <a href="">Read More</a>
             </div>
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n6.jpg" class="">
+                <img src=" n6.jpg" class="">
             </div>
         </div>
     </div>
@@ -305,7 +305,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 col-lg-4 col-sm-12 col-12 blogimg">
-                <img src="img/n20.jpg" class="">
+                <img src=" n20.jpg" class="">
             </div>
             <div class="col-md-8 col-lg-8 col-sm-12">
                 <h3 class="font-weight-bold text-teal">UK Lawmaker Says Fine of USD 663,000 Imposed on Facebook over User Privacy</h3>
